--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-
 {% extends "layout.html" %}
 {% from 'macros.html' import render_field %}
 
@@ -8,6 +7,6 @@
 	{% for field in form %}
 		{{ render_field(field) }}
 	{% endfor %}
-	<button type="submit" id="submit">Register!</button>
+	<button type="submit" id="submit">Login!</button>
 </form>
 {% endblock %}
